# focaldatajuniorapplieddatascientist

./: README.md  preprocessor.ipynb  raw_survey.csv  setup.cfg
.ipynb_checkpoints/: preprocessor-checkpoint.ipynb
main/: final_sub.py
notebooks/: preprocessor-checkpoint.ipynb  preprocessor.ipynb
notebooks/.ipynb_checkpoints/: preprocessor-checkpoint.ipynb
test/: test_final_sub.py
test/main/: test_final_sub.py
