[metadata]
name = survey_cleaner_funcs
description = functions to help clean the survey data and label bad respondants
author = Blessed Chianumba
author_email = blessedchianumba@gmail.com
url = https://github.com/MrFlygerian

install_requirments =
    numpy
    pandas
    datetime

setup_requires =
    setuptools_scm

test_requires =
    pytest
    pytest-cov

packages:
    [options.packages.find]

exclude =
    test*
    [aliases]
test = pytest

[tool:pytest]
adopts =
    --cov final_sub
    --cov survey_cleaner_funcs
    --cov-report=term-missing
    --cov-report=xml:test-reports\coverage.xml
    --junitxml=test-reports\pytest-reports.xml
    --verbose

junit_family = xunit2

norecursedirs =
    dist
    build
    .eggs

[coverage:run]
omit =
    *covtest.py
    *setup*
    **\__init__*

[yapf]
column_limit=120